# ds-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README.md.jinja  UPSTREAM.md  changelog.md  copier.yaml  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: CI.yaml  CI.yaml.jinja  CI.yml  template-smoke.yaml
docs/: downstream-templates.md
marimo/: 01_exploration.py  02_stats_quickstarts.py
scripts/: check_extension_markers.py  render_template.py
src/your_package_name/: __init__.py  config.py  paths.py
src/{{ package_name }}/: config.py.jinja
template/: .env.example  .env.example.jinja  .gitignore  .pre-commit-config.yaml  .python-version.jinja  AGENTS.md.jinja  README.md.jinja  pyproject.toml.jinja
template/.ai/: agent-instructions.md.jinja  ds-rules.md.jinja
template/.github/: copilot-instructions.md.jinja  dependabot.yml
template/.github/skills/: README.md
template/.github/skills/ds-eda/: SKILL.md.jinja
template/.github/skills/ds-evaluation/: SKILL.md.jinja
template/.github/workflows/: CI.yaml.jinja
template/data/: README.md.jinja
template/docs/: README.md
template/docs/decisions/: README.md
template/examples/: README.md
template/includes/: slugify.jinja
template/notebooks/marimo/: 01_exploration.py  02_stats_quickstart.py
template/reports/: README.md.jinja
template/scripts/: README.md
template/src/{{ package_name }}/: __init__.py  config.py.jinja  paths.py  settings.py
template/tests/: test_smoke.py.jinja
tests/: test_smoke.py  test_smoke.py.jinja
(+7 files in other folders)
